# CyberDuck

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  cmake.yml
Source/: CMakeLists.txt
Source/HttpFileServer/: CMakeLists.txt  main.cpp
Source/Sensors/: CMakeLists.txt  Utilities.h
Source/Server/: AnalogPin.cpp  AnalogPin.h  CMakeLists.txt  DigitalPin.cpp  DigitalPin.h  FundamentalTypes.h  Json.cpp  Json.h  Main.cpp  Server.cpp  Server.h  Utilities.cpp  Utilities.h
src/: CMakeLists.txt  analog_sensors.cpp  analog_sensors.h  basic_sensors.cpp  basic_sensors.h  encoder.cpp  encoder.h  environment.cpp  environment.h  main.cpp  meteo_station.cpp  meteo_station.h  sensors.cpp  sensors.h  server.cpp  server.h
src/sensors/: analog_input.cpp  analog_input.h  dust.cpp  dust.h  pressure.cpp  pressure.h
